applets/devicenotifier: check if device has been added before

BUG: 495140

Skip device if applet already has device with similar udi